# LL3M_auto

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  BLENDER_RAG.md  Code_visual_RAG.md  GEMINI.md  GOOD_PRACTICES.md  IMPLEMENTATION_PLAN.md  LOCAL_SETUP.md  Makefile  Makefile.production  PHASE_1_IMPLEMENTATION.md  PHASE_2_IMPLEMENTATION.md  PHASE_3_IMPLEMENTATION.md  PHASE_4_IMPLEMENTATION.md  PHASE_5_IMPLEMENTATION.md  PHASE_6_IMPLEMENTATION.md  PHASE_7_IMPLEMENTATION.md  README.md  bandit-report.json  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  test_blender_direct.py  test_blender_simple.py  test_e2e_demo.py  test_final_e2e.py  test_glittery_bunny_e2e.py  test_headless_workflow.py  test_lm_studio_integration.py  test_lm_studio_simple.py  verify_setup.py
.github/workflows/: ci-cd.yml  ci.yml
config/: agents.yaml  blender.yaml
docker/: Dockerfile.api  Dockerfile.web
examples/prompts/: basic_objects.json
k8s/: configmap-nginx.yaml  configmap-web.yaml  configmap.yaml  deployment-api.yaml  deployment-web.yaml  deployment.yaml  ingress.yaml  namespace.yaml  pvc.yaml  service.yaml
renders/glittery_bunny_20250903_154443/: README.md  generated_bunny_code.py  glittery_bunny.blend
setup/: README.md  blender_mcp_server.py  blender_mcp_setup.py  simple_blender_server.py  start_blender_mcp.sh
src/: __init__.py  cli.py
src/agents/: __init__.py  base.py  coding.py  critic.py  planner.py  retrieval.py  verification.py
src/api/: __init__.py  app.py  auth.py  database.py  models.py
src/api/routes/: __init__.py  assets.py  auth.py  batches.py  exports.py  health.py
src/assets/: __init__.py  manager.py
src/blender/: __init__.py  enhanced_executor.py  executor.py  templates.py
src/knowledge/: __init__.py  context7_client.py
src/security/: compliance.py
src/services/: analytics.py  batch_processor.py  performance_monitor.py
src/utils/: blender_code_utils.py  config.py  llm_client.py  logging.py  monitoring.py  types.py
src/workflow/: __init__.py  enhanced_graph.py  graph.py  main_graph.py  orchestrator.py  state.py
stubs/langgraph/: __init__.pyi
stubs/langgraph/checkpoint/: __init__.pyi
tests/: __init__.py  conftest.py  test_asset_manager.py  test_critic_agent.py  test_enhanced_executor.py  test_verification_agent.py
tests/e2e/: __init__.py  conftest.py  test_blender_integration.py  test_full_workflow.py  test_llm_integration.py
tests/integration/: test_full_workflow.py
tests/load/: api-load-test.js
tests/performance/: test_benchmarks.py
tests/production/: test_api_endpoints.py
tests/security/: test_security_validation.py
tests/unit/: test_agents.py  test_asset_manager.py  test_blender_executor.py  test_cli.py  test_config.py  test_context7.py  test_enhanced_blender_executor.py  test_fallback_documentation.py  test_logging.py  test_monitoring.py  test_template_application.py  test_templates.py  test_types.py  test_workflow.py  test_workflow_state.py
web/: next.config.js  package.json  tailwind.config.js  tsconfig.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/providers/: auth-provider.tsx  index.tsx
